<resources>
    <string name="app_name">FitnessMobile</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="tx_login">Login</string>
    <string name="title_activity_main">Fitness</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Add</string>
    <string name="tx_keep_connected">Keep Connected</string>
    <string name="menu_fitness">Fitness center</string>
    <string name="menu_student">Student</string>
    <string name="menu_training">My Trainning</string>
    <string name="menu_account">My Account</string>
    <string name="menu_about">About Fitness Mobile</string>
    <string name="menu_exit">Exit</string>
    <string name="tx_credentials_invalid">Credentials Invalid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_name">Name</string>
    <string name="hint_city">City</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_schedule_operation">Schedule Operation</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="developer">Developer: Eduardo Wallace</string>
    <string name="version">Version: 1.0</string>
    <string name="menu_alter">Alter</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_call">Call</string>
    <string name="menu_share">Share</string>

    <string name="facebook_app_id" translatable="false">1264908870286188</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1264908870286188</string>
    <string name="menu_show_map">Show on Map</string>
    <string name="title_activity_units_map" translatable="false">Map</string>
    <string name="title_msg_cancel">Are you sure you want to cancel?</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="search">Search</string>
    <string name="error_msg_required">THE ${field} IS MANDATORY</string>
    <string name="error_msg_min_required">THE MINIMUM SIZE REQUIRED IS</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>
